# st-link-analysis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-backend/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: pr_checks.yml
examples/: app.py
examples/data/: claims.json  company.json  social.json
examples/demos/: edge_style.py  event_listeners.py  layout.py  node_actions.py  node_style.py
examples/docs/: changelog.py  license.py  readme.py  supported_icons.py
st_link_analysis/: __init__.py  example.py  extended_example.py
st_link_analysis/component/: component.py  events.py  icons.py  layouts.py  styles.py
st_link_analysis/frontend/: package-lock.json  package.json  webpack.config.js
st_link_analysis/frontend/src/: index.html  index.js  style.css
st_link_analysis/frontend/src/components/: graph.js  infoBar.js  infobar.js  infopanel.js  nodeActions.js  toolBar.js  toolbar.js  viewbar.js
st_link_analysis/frontend/src/utils/: helpers.js  state.js  styles.js
tests/: conftest.py  requirements.txt  test_events.py  test_node_actions.py  test_smoke.py  test_x.py
