[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "st_link_analysis"
version = "0.3.0"
authors = [{ name = "AlrasheedA" }]
description = "A streamlit custom component for visualizing and interacting with graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["streamlit", "cytoscape", "graph", "link analysis"]
dependencies = ["streamlit >= 0.63"]

[project.urls]
Homepage = "https://github.com/AlrasheedA/st-link-analysis"
Issues = "https://github.com/AlrasheedA/st-link-analysis/issues"

[tool.hatch.build.targets.sdist]
include = [
  "st_link_analysis/*.py",
  "st_link_analysis/component/*.py",
  "st_link_analysis/frontend/build/*",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "--reruns=3"
